part2/log_output/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: appnamespace

spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      targetPort: 5000
